debug auth, still broken

--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -13,6 +13,8 @@
     "sign-in": "Sign in",
     "sign-in-with-email": "Sign in with Email",
     "sign-in-with-password": "Sign in with Password",
+    "signin-success": "Sign in successful",
+    "signin-error": "Error signing in",
     "create-a-new-account": "Create a new account",
     "create-account": "Create Account",
     "change-password": "Change Password",
@@ -114,7 +116,8 @@
     "new-password": "New Password",
     "continue-with-github": "Continue with GitHub",
     "continue-with-google": "Continue with Google",
-    "email-placeholder": "example@boxyhq.com",
+    "email-placeholder": "example@myemail.com",
+    "password-placeholder": "********",
     "confirm-password": "Confirm Password",
     "enter-new-password": "Enter new password",
     "directory-name": "Directory Name",
