--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -26,27 +26,27 @@
     "your-email": "Your email",
     "save-changes": "Save Changes",
     "successfully-updated": "Account has been successfully updated.",
-    "all-teams": "All Teams",
-    "team-invite": "is inviting you to join their team.",
-    "successfully-joined": "You have successfully joined the team.",
+    "all-projects": "All Projects",
+    "project-invite": "is inviting you to join their project.",
+    "successfully-joined": "You have successfully joined the project.",
     "invitation-sent": "Invitation sent!",
     "invitation-deleted": "Invitation deleted",
     "send-invite": "Send Invite",
     "invite-new-member": "Invite New Member",
     "invite-member-message": "Invite new member by email to join your organization.",
     "accept-invitation": "Accept invitation",
-    "create-team": "Create Team",
-    "remove-team": "Remove Team",
-    "remove-team-warning": "This action cannot be undone. This will permanently delete the team and associated members access.",
-    "team-created": "Team created successfully.",
-    "leave-team": "Leave Team",
-    "leave-team-success": "You have left the team successfully.",
-    "choose-team": "Choose your team",
-    "allow-team": "Allow team members to login using an Identity Provider.",
-    "members-of-a-team": "Members of a team have access to specific areas, such as a new release or a new application feature.",
-    "accept-invite": "You can accept the invitation to join the team by clicking the button below.",
+    "create-project": "Create Project",
+    "remove-project": "Remove Project",
+    "remove-project-warning": "This action cannot be undone. This will permanently delete the project and associated members access.",
+    "project-created": "Project created successfully.",
+    "leave-project": "Leave Project",
+    "leave-project-success": "You have left the project successfully.",
+    "choose-project": "Choose your project",
+    "allow-project": "Allow project members to login using an Identity Provider.",
+    "members-of-a-project": "Members of a project have access to specific areas, such as a new release or a new application feature.",
+    "accept-invite": "You can accept the invitation to join the project by clicking the button below.",
     "invite-create-account": "To continue, you must either create a new account or login to an existing account.",
-    "no-active-team": "You do not have any active team.",
+    "no-active-project": "You do not have any active project.",
     "audit-logs": "Audit Logs allow you to track and analyze each member activity.",
     "coming-soon": "Coming Soon",
     "provision": "Provision and de-provision users with your directory provider.",
@@ -99,7 +99,7 @@
     "new-photo": "Select New Photo",
     "add-profile-picture": "Add a profile picture",
     "dashboard": "Dashboard",
-    "teams": "Teams",
+    "projects": "Projects",
     "account": "Account",
     "password": "Password",
     "settings": "Settings",
@@ -108,8 +108,8 @@
     "audit-logs-menu": "Audit Logs",
     "webhooks": "Webhooks",
     "api-keys": "API Keys",
-    "team": "Team",
-    "team-name": "Team Name",
+    "project": "Project",
+    "project-name": "Project Name",
     "update-account": "Update Account",
     "update-password": "Update Password",
     "current-password": "Current Password",
@@ -125,17 +125,17 @@
     "configure-singlesignon": "SAML Single Sign-On",
     "copy-paste-metadata": "Copy and paste Metadata XML here.",
     "members-deleted": "Members deleted successfully.",
-    "team-members": "Team Members",
+    "project-members": "Project Members",
     "member-role-updated": "Member role updated successfully.",
     "member-deleted": "Member deleted successfully.",
-    "team-settings": "Team Settings",
-    "team-slug": "Team Slug",
-    "team-slug-description": "A unique ID used to identify this team in URLs.",
-    "team-domain": "Domain",
+    "project-settings": "Project Settings",
+    "project-slug": "Project Slug",
+    "project-slug-description": "A unique ID used to identify this project in URLs.",
+    "project-domain": "Domain",
     "acs-url": "ACS URL",
     "metadata-url": "Metadata URL",
     "metadata-xml": "Metadata XML",
-    "saml-connection-established": "Single Sign-On connection is enabled for your team.",
+    "saml-connection-established": "Single Sign-On connection is enabled for your project.",
     "products": "Products",
     "account-info": "Account Details"
   }
