media component with mock data. file upload comp wip

--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -27,6 +27,7 @@
     "your-email": "Your email",
     "save-changes": "Save Changes",
     "successfully-updated": "Account has been successfully updated.",
+    "upload-media": "Upload Media",
     "all-projects": "All Projects",
     "project-invite": "is inviting you to join their project.",
     "successfully-joined": "You have successfully joined the project.",
