aws storage client, gcp storage WIP, storage api WIP

--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -29,6 +29,8 @@
     "successfully-updated": "Account has been successfully updated.",
     "upload-media": "Upload Media",
     "all-projects": "All Projects",
+    "create-album": "Create Album",
+    "albums": "Albums",
     "project-invite": "is inviting you to join their project.",
     "successfully-joined": "You have successfully joined the project.",
     "invitation-sent": "Invitation sent!",
